feat(admin): introduce admin commands for managing predictions and props (#191)
